@@ -26,6 +26,12 @@ matrix:
       env: DJANGO="Django>=1.11,<2.0"
     - python: 3.6
       env: DJANGO="Django>=1.11,<2.0"
+    - python: 3.4
+      env: DJANGO="Django>=2.0,<2.1"
+    - python: 3.5
+      env: DJANGO="Django>=2.0,<2.1"
+    - python: 3.6
+      env: DJANGO="Django>=2.0,<2.1"
 
 install:
   - pip install $DJANGO
