@@ -3,6 +3,7 @@ envlist =
     py{27,33,34,35}-django18
     py{27,34,35}-django110
     py{27,34,35,36}-django111
+    py{34,35,36}-django20
 
 [testenv]
 commands =
@@ -17,6 +18,7 @@ deps =
     django18: Django>=1.8,<1.9
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
     mock
     msgpack-python>=0.4.6
     redis>=2.10.0
